--- a/src/static/index.html
+++ b/src/static/index.html
@@ -15,7 +15,7 @@
     <main>
       <section id="activities-container">
         <h3>Available Activities</h3>
-        <div id="activities-list">
+        <div id="activities-list" style="list-style-type: none;">
           <!-- Activities will be loaded here -->
           <p>Loading activities...</p>
         </div>
